p2/confs/app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: app1
          image: paulbouwer/hello-kubernetes:1.10
          ports:
          - containerPort: 80
          resources:
            limits:
              memory: 256Mi
              cpu: "0.2"
            requests:
              memory: 256Mi
              cpu: "0.2"

---

apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
    - port: 80
      targetPort: 80
